// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactFieldBase does not render the label if showLabel is false 1`] = `
<div>
  <div
    class="form-group hide"
  />
</div>
`;

exports[`ReactFieldBase renders the FieldBase with contentRenderer 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <div>
      <h1>
        Foo bar
      </h1>
    </div>
  </div>
</div>
`;

exports[`ReactFieldBase renders the FieldBase with help text 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <span
      class="form-text"
    >
      Type something!
    </span>
  </div>
</div>
`;

exports[`ReactFieldBase renders the FieldBase with id 1`] = `
<div>
  <div
    class="form-group hide"
  />
</div>
`;

exports[`ReactFieldBase renders the FieldBase with label 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <p
      class="ddm-label"
    >
      Text
    </p>
  </div>
</div>
`;

exports[`ReactFieldBase renders the FieldBase with required 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <p
      class="ddm-label"
    >
      <span
        class="reference-mark"
      >
        <svg
          class="lexicon-icon lexicon-icon-asterisk"
          role="presentation"
        >
          <use
            xlink:href="#asterisk"
          />
        </svg>
      </span>
    </p>
  </div>
</div>
`;

exports[`ReactFieldBase renders the default markup 1`] = `
<div>
  <div
    class="form-group hide"
  />
</div>
`;
